fix overflow

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 html, body {
     font-family: "Newsreader", serif;
     font-weight: 350;
@@ -53,6 +56,7 @@ p.visible {
     width: fit-content;
     max-width: 420px;
     margin: 128px auto;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
@@ -83,7 +87,11 @@ footer > a {
 }
 
 @media screen and (max-width: 800px) {
+    body {
+        width: auto;
+    }
     .content {
         margin: 0 auto;
+        max-width: auto;
     }
 }
